Implements basic key signing
Note, this will not be a production recommended approach

Its a basic implementation as outlined within #360
