# pkg/db/models.go
@@ -1,6 +1,6 @@
 // Code generated by sqlc. DO NOT EDIT.
 // versions:
-//   sqlc v1.18.0
+//   sqlc v1.17.2
 
 package db
 
@@ -92,6 +92,17 @@ type SessionStore struct {
 	Port         sql.NullInt32 `json:"port"`
 	SessionState string        `json:"session_state"`
 	CreatedAt    time.Time     `json:"created_at"`
+}
+
+type SigningKey struct {
+	ID            int32     `json:"id"`
+	GroupID       int32     `json:"group_id"`
+	PrivateKey    string    `json:"private_key"`
+	PublicKey     string    `json:"public_key"`
+	Passphrase    string    `json:"passphrase"`
+	KeyIdentifier string    `json:"key_identifier"`
+	CreatedAt     time.Time `json:"created_at"`
+	UpdatedAt     time.Time `json:"updated_at"`
 }
 
 type User struct {
